2017-05-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl,
	  tools/cfg-import.pl,
	  tools/device-help.pl,
	  tools/device-manager.pl:
	  Updated based on the mplabx-3.61.

2016-12-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Changed website from http://gputils.sourceforge.net
	  to https://gputils.sourceforge.io .

2016-06-27  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  Unified handling of RAM bank properties.

2016-06-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/cfg-import.pl:
	  Changed types: unsigned short --> uint16_t

2016-06-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* build/mingw/do_setup.sh, build/mingw/make-mingw:
	  Enabled use the bzip2 source archive.

2016-05-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl:
	  Updated with new devices based on the mplabx-3.30.

2016-05-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl, tools/device-manager.pl:
	  Updated with new devices based on the mplabx-3.30.

2016-03-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Added the PIC12I subtype.

2016-02-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Updated based on the mplabx-3.25.

2016-02-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  The svn version got a link.

2016-01-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Updated based on the mplabx-3.20.

2016-01-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Fix a Microchip bug.

2016-01-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>