@@ -1,4 +1,8 @@
 2017-05-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/device-help.pl:
+	  Improved mplabx-3.61 support.
+
+2017-05-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/build-register-db.pl,
 	  tools/cfg-import.pl,
 	  tools/device-help.pl,
